--- a/_config.yml
+++ b/_config.yml
@@ -1,22 +1,21 @@
 # The main config file for your Jekyll template
 
 # Site settings
-title: Jackal               # used for the html title of every page
+title: James Cuénod               # used for the html title of every page
 desc: >
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Personal website for James Cuénod. Portfolio and references
+  to work in biblical studies and software engineering.
 
-url: http://jackal.com      # put your website hosting url here
+url: https://jcuenod/github.io      # put your website hosting url here
 baseurl: ''                 # the subpath of your site, e.g. /blog
 permalink: /:year/:title/   # how should we display posts url
 
 # Meta settings
-email: jackal@gmail.com
-author: The Jackal
-twitter_username: clenemt
-github_username: clenemt
-github_source: jackal
+email: j3frea+jcuenod.github@gmail.com
+author: James Cuénod
+twitter_username: jamescuenod
+github_username: jcuenod
+github_source: jcuenod.github.com
 
 # Put your ga tracking code below
 google_analytics: 'UA-XXXXXXXX-X'
@@ -29,18 +28,18 @@ paginate_path: "/articles/page:num/"  # link scheme for articles, should be letf
 # Used to define the navigation menu items
 # > Title is the tile of the navigation item, url the url and desc is the tooltip
 navigation:
-  - title: Articles
-    url: /articles/
-    desc: Stuffs I write about
-  - title: Projects
-    url: /projects/
-    desc: Stuffs I like to do
-  - title: Work
-    url: /work/
-    desc: Stuffs I hate to do
+  # - title: Articles
+  #   url: /articles/
+  #   desc: Stuffs I write about
+  - title: Biblical Studies
+    url: /biblical/
+    desc: Biblical and theological work
+  - title: Software Development
+    url: /software/
+    desc: Hobbyist programming projects
   - title: About
     url: /about/
-    desc: Learn about me
+    desc: Curriculum vitae
 
 # Used by Jekyll to recognize what is a post and what is a page
 defaults:
